--- a/ioasys-challenge/Components/CompanyCell.xib
+++ b/ioasys-challenge/Components/CompanyCell.xib
@@ -16,7 +16,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilepic" translatesAutoresizingMaskIntoConstraints="NO" id="lR1-gZ-KGa">
-                        <rect key="frame" x="20" y="10" width="60.000000000000227" height="60.000000000000227"/>
+                        <rect key="frame" x="20" y="10" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="lR1-gZ-KGa" secondAttribute="height" multiplier="1:1" id="IsD-UE-xnu"/>
                         </constraints>
