--- a/ioasys-challenge/Components/CompanyCell.xib
+++ b/ioasys-challenge/Components/CompanyCell.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CompanyCell" customModule="ioasys_challenge" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CompanyCell" rowHeight="80" id="eYt-eZ-FIN" customClass="CompanyCell" customModule="ioasys_challenge" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilepic" translatesAutoresizingMaskIntoConstraints="NO" id="lR1-gZ-KGa">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="smallPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="lR1-gZ-KGa">
                         <rect key="frame" x="20" y="10" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="lR1-gZ-KGa" secondAttribute="height" multiplier="1:1" id="IsD-UE-xnu"/>
@@ -55,10 +55,15 @@
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <connections>
+                <outlet property="cellImageView" destination="lR1-gZ-KGa" id="u9Y-0w-eyp"/>
+                <outlet property="subtitleLabel" destination="ZKg-f4-vKI" id="V23-sG-MqY"/>
+                <outlet property="titleLabel" destination="b5t-MU-CZW" id="qtC-La-924"/>
+            </connections>
             <point key="canvasLocation" x="134" y="27"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="profilepic" width="949.5" height="949"/>
+        <image name="smallPlaceholder" width="120" height="120"/>
     </resources>
 </document>
